--- a/estilo.css
+++ b/estilo.css
@@ -37,7 +37,7 @@ body{
 .bio-container{
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     font-family: 'Zuma', sans-serif;
                                                    
 }
@@ -48,8 +48,8 @@ body{
     /* QUADRO */
     background-color: rgb(255, 73, 143);
     border-radius: 10px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     /* TEXTO */
     color: black;
     font-size: 30px;
@@ -70,8 +70,8 @@ body{
     /* QUADRO */
     background-color: rgb(87, 255, 93);
     border-radius: 10px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     /* TEXTO */
     color: black;
     font-size: 30px;
@@ -92,8 +92,8 @@ body{
     /* QUADRO */
     background-color: rgb(0, 213, 255);
     border-radius: 10px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     /* TEXTO */
     color: black;
     font-size: 30px;
@@ -114,8 +114,8 @@ body{
     /* QUADRO */
     background-color: rgb(255, 204, 0);
     border-radius: 10px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     /* TEXTO */
     color: black;
     font-size: 30px;
@@ -136,8 +136,8 @@ body{
     /* QUADRO */
     background-color: rgb(0, 106, 255);
     border-radius: 10px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     /* TEXTO */
     color: black;
     font-size: 30px;
@@ -159,8 +159,8 @@ body{
     /* QUADRO */
     background-color: rgb(61, 215, 130);
     border-radius: 10px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     /* TEXTO */
     color: black;
     font-size: 30px;
@@ -175,11 +175,4 @@ body{
     height: 80px;
     border-radius: 10px;
     margin-bottom: 20px;
-}
-
-@media screen and (max-width:400px) {
-    .titulo text{
-        display: none;
-    };
-    
 }
