--- a/estilo.css
+++ b/estilo.css
@@ -7,6 +7,7 @@ body{
     justify-content: center;
     color: rgb(255, 143, 63);
     font-size: 40px;
+    margin-top: 20px;
     margin-bottom: 100px;
     font-family: 'Technology', sans-serif;
     
@@ -175,4 +176,31 @@ body{
     height: 80px;
     border-radius: 10px;
     margin-bottom: 20px;
+}
+
+
+
+/* AREA DE ESTILIZAÇÃO DO REGULAMENTO */
+
+.regulamento{
+
+/* QUADRO */
+background-color: rgb(0, 106, 255);
+border-radius: 10px;
+width: 300px;
+height: auto;
+/* TEXTO */
+color: black;
+font-size: 30px;
+margin: 0px 50px 100px 50px;
+
+}
+/* ICONE OU DESIGN DA CAIXA DA BIO*/
+.regulamento img{
+display: flex;
+align-items: start;
+width: 80px;
+height: 80px;
+border-radius: 10px;
+margin-bottom: 20px;
 }
